--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   
 
   
-  <link rel="stylesheet" href="/progress-for-jekyll/css/reset.css">
-  <link rel="stylesheet" href="/progress-for-jekyll/css/style.css">
+  <link rel="stylesheet" href="/{url}/css/reset.css">
+  <link rel="stylesheet" href="/{url}/css/style.css">
 
-  <script src="/progress-for-jekyll/js/modernizr.js"></script> 
+  <script src="/{url}/js/modernizr.js"></script> 
   
 
 
@@ -55,7 +55,7 @@
 <body>
   <header class="header">
   <h1>
-    <a href="http://alexanderussell.github.io/progress-for-jekyll/" title="Home">Progress</a>
+    <a href="http://bymyself-yoon.github.io/" title="Home">Progress</a>
   </h1>
   <nav>
     <ul>
