--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   
 
   
-  <link rel="stylesheet" href="/{url}/css/reset.css">
-  <link rel="stylesheet" href="/{url}/css/style.css">
+  <link rel="stylesheet" href="/bymyself-yoon.github.io/css/reset.css">
+  <link rel="stylesheet" href="/bymyself-yoon.github.io/css/style.css">
 
-  <script src="/{url}/js/modernizr.js"></script> 
+  <script src="/bymyself-yoon.github.io/js/modernizr.js"></script> 
   
 
 
